--- a/Mini-Moodle/src/main/resources/com/example/minimoodle/teacher-login.fxml
+++ b/Mini-Moodle/src/main/resources/com/example/minimoodle/teacher-login.fxml
@@ -20,8 +20,9 @@
             <Font name="Trebuchet MS" size="18.0" />
          </font>
       </Label>
-      <TextField fx:id="teacherLoginIdBox" layoutX="218.0" layoutY="164.0" onAction="#checkTeacherLoginEnteredId" prefHeight="35.0" prefWidth="230.0" promptText="Teacher ID" />
+      <TextField fx:id="teacherLoginIdBox" layoutX="218.0" layoutY="164.0" prefHeight="35.0" prefWidth="230.0" promptText="Teacher ID" />
       <PasswordField fx:id="teacherLoginPasswordBox" layoutX="218.0" layoutY="208.0" prefHeight="35.0" prefWidth="230.0" promptText="Password" />
+      <TextField fx:id="teacherLoginPasswordVisibleBox" layoutX="218.0" layoutY="208.0" prefHeight="35.0" prefWidth="230.0" promptText="Password" />
       <CheckBox fx:id="teacherLoginPasswordCheckBox" layoutX="281.0" layoutY="255.0" mnemonicParsing="false" onAction="#toggleTeacherLoginPasswordVisibility" text="Show Password" textAlignment="JUSTIFY" />
       <Button fx:id="teacherLoginButton" layoutX="256.0" layoutY="287.0" mnemonicParsing="false" onAction="#processTeacherLogin" prefHeight="42.0" prefWidth="154.0" text="Login" textAlignment="JUSTIFY">
          <font>
