--- a/Mini-Moodle/src/main/resources/com/example/minimoodle/admin-login.fxml
+++ b/Mini-Moodle/src/main/resources/com/example/minimoodle/admin-login.fxml
@@ -8,23 +8,32 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="400.0" prefWidth="640.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.minimoodle.AdminLoginController">
+<AnchorPane prefHeight="400.0" prefWidth="640.0" xmlns="http://javafx.com/javafx/23.0.1"
+   xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.minimoodle.AdminLoginController">
    <children>
       <Label layoutX="227.0" layoutY="44.0" text="Admin Login" textAlignment="JUSTIFY">
          <font>
             <Font name="Trebuchet MS" size="36.0" />
          </font>
       </Label>
-      <Label layoutX="202.0" layoutY="109.0" text="Enter Admin ID and Password" textAlignment="JUSTIFY">
+      <Label layoutX="202.0" layoutY="109.0" text="Enter Admin ID and Password"
+         textAlignment="JUSTIFY">
          <font>
             <Font name="Trebuchet MS" size="18.0" />
          </font>
       </Label>
-      <TextField fx:id="adminLoginIdBox" layoutX="210.0" layoutY="164.0" prefHeight="35.0" prefWidth="230.0" promptText="Admin ID" />
-      <PasswordField fx:id="adminLoginPasswordBox" layoutX="210.0" layoutY="208.0" prefHeight="35.0" prefWidth="230.0" promptText="Password" />
-      <TextField fx:id="adminLoginPasswordVisibleBox" layoutX="210.0" layoutY="208.0" prefHeight="35.0" prefWidth="230.0" promptText="Password" />
-      <CheckBox fx:id="adminLoginPasswordCheckBox" layoutX="273.0" layoutY="255.0" mnemonicParsing="false" onAction="#toggleAdminLoginPasswordVisibility" text="Show Password" textAlignment="JUSTIFY" />
-      <Button fx:id="adminLoginButton" layoutX="248.0" layoutY="287.0" mnemonicParsing="false" onAction="#processAdminLogin" prefHeight="42.0" prefWidth="154.0" text="Login" textAlignment="JUSTIFY">
+      <TextField fx:id="adminLoginIdBox" layoutX="210.0" layoutY="164.0" prefHeight="35.0"
+         prefWidth="230.0" promptText="Admin ID" />
+      <PasswordField fx:id="adminLoginPasswordBox" layoutX="210.0" layoutY="208.0" prefHeight="35.0"
+         prefWidth="230.0" promptText="Password" />
+      <TextField fx:id="adminLoginPasswordVisibleBox" layoutX="210.0" layoutY="208.0"
+         prefHeight="35.0" prefWidth="230.0" promptText="Password" />
+      <CheckBox fx:id="adminLoginPasswordCheckBox" layoutX="273.0" layoutY="255.0"
+         mnemonicParsing="false" onAction="#toggleAdminLoginPasswordVisibility" text="Show Password"
+         textAlignment="JUSTIFY" />
+      <Button fx:id="adminLoginButton" layoutX="248.0" layoutY="287.0" mnemonicParsing="false"
+         onAction="#processAdminLogin" prefHeight="42.0" prefWidth="154.0" text="Login"
+         textAlignment="JUSTIFY">
          <font>
             <Font name="Trebuchet MS" size="16.0" />
          </font>
