--- a/Mini-Moodle/src/main/resources/com/example/minimoodle/welcome-page.fxml
+++ b/Mini-Moodle/src/main/resources/com/example/minimoodle/welcome-page.fxml
@@ -9,9 +9,12 @@
 <?import javafx.scene.text.Font?>
 
 
-<AnchorPane prefHeight="400.0" prefWidth="640.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.minimoodle.WelcomePageController">
+<AnchorPane prefHeight="400.0" prefWidth="640.0" xmlns="http://javafx.com/javafx/23.0.1"
+   xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.minimoodle.WelcomePageController">
    <children>
-      <VBox alignment="CENTER" layoutX="184.0" layoutY="110.0" spacing="10.0" AnchorPane.bottomAnchor="20.0" AnchorPane.leftAnchor="20.0" AnchorPane.rightAnchor="20.0" AnchorPane.topAnchor="20.0">
+      <VBox alignment="CENTER" layoutX="184.0" layoutY="110.0" spacing="10.0"
+         AnchorPane.bottomAnchor="20.0" AnchorPane.leftAnchor="20.0" AnchorPane.rightAnchor="20.0"
+         AnchorPane.topAnchor="20.0">
          <children>
             <Label text="Welcome to Mini Moodle!" textAlignment="JUSTIFY">
                <font>
@@ -23,7 +26,8 @@
                   <Font name="JetBrains Mono Regular" size="18.0" />
                </font>
             </Label>
-            <RadioButton fx:id="welcomePageAdminRadioButton" mnemonicParsing="false" prefHeight="19.0" prefWidth="78.0" text="Admin">
+            <RadioButton fx:id="welcomePageAdminRadioButton" mnemonicParsing="false"
+               prefHeight="19.0" prefWidth="78.0" text="Admin">
                <font>
                   <Font name="Trebuchet MS" size="14.0" />
                </font>
@@ -31,12 +35,14 @@
                   <ToggleGroup fx:id="roleGroup" />
                </toggleGroup>
             </RadioButton>
-            <RadioButton fx:id="welcomePageTeacherRadioButton" mnemonicParsing="false" selected="true" text="Teacher" toggleGroup="$roleGroup">
+            <RadioButton fx:id="welcomePageTeacherRadioButton" mnemonicParsing="false"
+               selected="true" text="Teacher" toggleGroup="$roleGroup">
                <font>
                   <Font name="Trebuchet MS" size="14.0" />
                </font>
             </RadioButton>
-            <Button fx:id="welcomePageContinueButton" mnemonicParsing="false" onAction="#handleWelcomePageContinueButton" text="Continue to Login" />
+            <Button fx:id="welcomePageContinueButton" mnemonicParsing="false"
+               onAction="#handleWelcomePageContinueButton" text="Continue to Login" />
          </children>
       </VBox>
    </children>
