--- a/Mini-Moodle/src/main/resources/com/example/minimoodle/teacher-dashboard.fxml
+++ b/Mini-Moodle/src/main/resources/com/example/minimoodle/teacher-dashboard.fxml
@@ -2,141 +2,60 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.Tab?>
-<?import javafx.scene.control.TabPane?>
-<?import javafx.scene.control.TableColumn?>
-<?import javafx.scene.control.TableView?>
-<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="400.0" prefWidth="640.0" xmlns="http://javafx.com/javafx/23.0.1"
-    xmlns:fx="http://javafx.com/fxml/1"
-    fx:controller="com.example.minimoodle.TeacherDashboardController">
-    <children>
-        <Label layoutX="14.0" layoutY="14.0" text="Teacher Dashboard" textAlignment="JUSTIFY">
-            <font>
-                <Font name="Trebuchet MS" size="28.0" />
-            </font>
-        </Label>
-        <TabPane layoutX="14.0" layoutY="60.0" AnchorPane.topAnchor="60.0"
-            AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="14.0"
-            AnchorPane.rightAnchor="14.0">
-            <tabs>
-                <Tab text="Course Overview" closable="false">
-                    <content>
-                        <AnchorPane>
-                            <children>
-                                <Label fx:id="courseNameLabel" layoutX="10.0" layoutY="10.0"
-                                    text="Course Name: [TBD]">
-                                    <font>
-                                        <Font name="Trebuchet MS" size="18.0" />
-                                    </font>
-                                </Label>
-                                <Label fx:id="courseCodeLabel" layoutX="10.0" layoutY="40.0"
-                                    text="Course Code: [TBD]">
-                                    <font>
-                                        <Font name="Trebuchet MS" size="16.0" />
-                                    </font>
-                                </Label>
-                                <Label fx:id="studentCountLabel" layoutX="10.0" layoutY="70.0"
-                                    text="Student Count: [TBD]">
-                                    <font>
-                                        <Font name="Trebuchet MS" size="16.0" />
-                                    </font>
-                                </Label>
-                            </children>
-                        </AnchorPane>
-                    </content>
-                </Tab>
-                <Tab text="Enrollment Requests" closable="false">
-                    <content>
-                        <AnchorPane>
-                            <children>
-                                <TableView fx:id="enrollmentTable" layoutX="10.0" layoutY="10.0"
-                                    AnchorPane.topAnchor="10.0" AnchorPane.bottomAnchor="60.0"
-                                    AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0">
-                                    <columns>
-                                        <TableColumn text="Student ID" prefWidth="100.0" />
-                                        <TableColumn text="Name" prefWidth="150.0" />
-                                        <TableColumn text="Course" prefWidth="150.0" />
-                                        <TableColumn text="Status" prefWidth="100.0" />
-                                    </columns>
-                                </TableView>
-                                <Button fx:id="approveRequestButton" layoutX="200.0" layoutY="10.0"
-                                    AnchorPane.bottomAnchor="10.0" text="Approve"
-                                    onAction="#approveEnrollment" prefWidth="100.0" />
-                                <Button fx:id="rejectRequestButton" layoutX="310.0" layoutY="10.0"
-                                    AnchorPane.bottomAnchor="10.0" text="Reject"
-                                    onAction="#rejectEnrollment" prefWidth="100.0" />
-                            </children>
-                        </AnchorPane>
-                    </content>
-                </Tab>
-                <Tab text="View Students" closable="false">
-                    <content>
-                        <AnchorPane>
-                            <children>
-                                <TableView fx:id="studentTable" layoutX="10.0" layoutY="10.0"
-                                    AnchorPane.topAnchor="10.0" AnchorPane.bottomAnchor="10.0"
-                                    AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0">
-                                    <columns>
-                                        <TableColumn text="Student ID" prefWidth="100.0" />
-                                        <TableColumn text="Name" prefWidth="150.0" />
-                                        <TableColumn text="Course" prefWidth="150.0" />
-                                        <TableColumn text="Enrollment Date" prefWidth="150.0" />
-                                    </columns>
-                                </TableView>
-                            </children>
-                        </AnchorPane>
-                    </content>
-                </Tab>
-                <Tab text="Manage Students" closable="false">
-                    <content>
-                        <AnchorPane>
-                            <children>
-                                <TableView fx:id="manageStudentTable" layoutX="10.0" layoutY="10.0"
-                                    AnchorPane.topAnchor="10.0" AnchorPane.bottomAnchor="60.0"
-                                    AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0">
-                                    <columns>
-                                        <TableColumn text="Student ID" prefWidth="100.0" />
-                                        <TableColumn text="Name" prefWidth="150.0" />
-                                        <TableColumn text="Course" prefWidth="150.0" />
-                                        <TableColumn text="Status" prefWidth="100.0" />
-                                    </columns>
-                                </TableView>
-                                <Button fx:id="removeStudentButton" layoutX="250.0" layoutY="10.0"
-                                    AnchorPane.bottomAnchor="10.0" text="Remove Student"
-                                    onAction="#removeStudent" prefWidth="120.0" />
-                            </children>
-                        </AnchorPane>
-                    </content>
-                </Tab>
-                <Tab text="Add Grades" closable="false">
-                    <content>
-                        <AnchorPane>
-                            <children>
-                                <TableView fx:id="gradeTable" layoutX="10.0" layoutY="10.0"
-                                    AnchorPane.topAnchor="10.0" AnchorPane.bottomAnchor="60.0"
-                                    AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0">
-                                    <columns>
-                                        <TableColumn text="Student ID" prefWidth="100.0" />
-                                        <TableColumn text="Name" prefWidth="150.0" />
-                                        <TableColumn text="Course" prefWidth="150.0" />
-                                        <TableColumn text="Grade" prefWidth="100.0" />
-                                    </columns>
-                                </TableView>
-                                <TextField fx:id="gradeInput" layoutX="200.0" layoutY="10.0"
-                                    AnchorPane.bottomAnchor="10.0" prefWidth="100.0"
-                                    promptText="Enter Grade" />
-                                <Button fx:id="submitGradeButton" layoutX="310.0" layoutY="10.0"
-                                    AnchorPane.bottomAnchor="10.0" text="Submit Grade"
-                                    onAction="#submitGrade" prefWidth="120.0" />
-                            </children>
-                        </AnchorPane>
-                    </content>
-                </Tab>
-            </tabs>
-        </TabPane>
-    </children>
+<AnchorPane prefHeight="400.0" prefWidth="640.0" style="-fx-background-color: #f4f4f4;" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.minimoodle.TeacherDashboardController">
+   <children>
+      <!-- Title -->
+      <Label layoutX="172.0" layoutY="38.0" text="Welcome, [Teacher]" textAlignment="JUSTIFY">
+         <font>
+            <Font name="Trebuchet MS" size="36.0" />
+         </font>
+      </Label>
+
+      <!-- Course Details -->
+      <Label fx:id="courseNameLabel" layoutX="100.0" layoutY="120.0" text="Course Name: [Course Name]" textAlignment="JUSTIFY">
+         <font>
+            <Font name="Trebuchet MS" size="18.0" />
+         </font>
+      </Label>
+      <Label fx:id="courseIdLabel" layoutX="100.0" layoutY="150.0" text="Course ID: [Course ID]" textAlignment="JUSTIFY">
+         <font>
+            <Font name="Trebuchet MS" size="18.0" />
+         </font>
+      </Label>
+      <Label fx:id="enrolledStudentsLabel" layoutX="100.0" layoutY="180.0" text="Enrolled Students: [Count]" textAlignment="JUSTIFY">
+         <font>
+            <Font name="Trebuchet MS" size="18.0" />
+         </font>
+      </Label>
+
+      <!-- Buttons -->
+      <Button fx:id="teacherDashboardApplicantsButton" layoutX="100.0" layoutY="240.0" mnemonicParsing="false" onAction="#handleTeacherSeeApplyingStudents" prefHeight="40.0" prefWidth="160.0" style="-fx-background-color: #4CAF50; -fx-text-fill: white; -fx-background-radius: 5;" text="Applicants" textAlignment="JUSTIFY">
+         <font>
+            <Font name="Trebuchet MS" size="16.0" />
+         </font>
+      </Button>
+      <Button fx:id="teacherDashboardEnrolledStudentsButton" layoutX="280.0" layoutY="240.0" mnemonicParsing="false" onAction="#handleTeacherViewEnrolledStudentsTable" prefHeight="40.0" prefWidth="160.0" style="-fx-background-color: #2196F3; -fx-text-fill: white; -fx-background-radius: 5;" text="Enrolled Students" textAlignment="JUSTIFY">
+         <font>
+            <Font name="Trebuchet MS" size="16.0" />
+         </font>
+      </Button>
+      <Button fx:id="teacherDashboardGradingButton" layoutX="100.0" layoutY="300.0" mnemonicParsing="false" onAction="#handleTeacherGrading" prefHeight="40.0" prefWidth="160.0" style="-fx-background-color: #FF9800; -fx-text-fill: white; -fx-background-radius: 5;" text="Grading" textAlignment="JUSTIFY">
+         <font>
+            <Font name="Trebuchet MS" size="16.0" />
+         </font>
+      </Button>
+      <Button fx:id="teacherDashboardRefreshButton" layoutX="280.0" layoutY="300.0" mnemonicParsing="false" onAction="#handleTeacherDashboardRefresh" prefHeight="40.0" prefWidth="160.0" style="-fx-background-color: #9E9E9E; -fx-text-fill: white; -fx-background-radius: 5;" text="Refresh" textAlignment="JUSTIFY">
+         <font>
+            <Font name="Trebuchet MS" size="16.0" />
+         </font>
+      </Button>
+      <Button fx:id="teacherDashboardLogoutButton" layoutX="541.0" layoutY="340.0" mnemonicParsing="false" onAction="#handleTeacherLogout" prefHeight="32.0" prefWidth="69.0" style="-fx-background-color: #F44336; -fx-text-fill: white; -fx-background-radius: 5;" text="Logout" textAlignment="JUSTIFY">
+         <font>
+            <Font name="Trebuchet MS" size="16.0" />
+         </font>
+      </Button>
+   </children>
 </AnchorPane>
