--- a/Mini-Moodle/src/main/resources/com/example/minimoodle/teacher-dashboard.fxml
+++ b/Mini-Moodle/src/main/resources/com/example/minimoodle/teacher-dashboard.fxml
@@ -5,16 +5,16 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="400.0" prefWidth="640.0" style="-fx-background-color: #f4f4f4;" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.minimoodle.TeacherDashboardController">
+<AnchorPane prefHeight="400.0" prefWidth="640.0" style="-fx-background-color: #f4f4f4;" 
+            xmlns="http://javafx.com/javafx/23.0.1" 
+            xmlns:fx="http://javafx.com/fxml/1" 
+            fx:controller="com.example.minimoodle.TeacherDashboardController">
    <children>
-      <!-- Title -->
-      <Label layoutX="172.0" layoutY="38.0" text="Welcome, [Teacher]" textAlignment="JUSTIFY">
+      <Label fx:id="teacherIdLabel" layoutX="172.0" layoutY="38.0" text="Welcome, [Teacher]" textAlignment="JUSTIFY">
          <font>
             <Font name="Trebuchet MS" size="36.0" />
          </font>
       </Label>
-
-      <!-- Course Details -->
       <Label fx:id="courseNameLabel" layoutX="100.0" layoutY="120.0" text="Course Name: [Course Name]" textAlignment="JUSTIFY">
          <font>
             <Font name="Trebuchet MS" size="18.0" />
@@ -30,8 +30,6 @@
             <Font name="Trebuchet MS" size="18.0" />
          </font>
       </Label>
-
-      <!-- Buttons -->
       <Button fx:id="teacherDashboardApplicantsButton" layoutX="100.0" layoutY="240.0" mnemonicParsing="false" onAction="#handleTeacherSeeApplyingStudents" prefHeight="40.0" prefWidth="160.0" style="-fx-background-color: #4CAF50; -fx-text-fill: white; -fx-background-radius: 5;" text="Applicants" textAlignment="JUSTIFY">
          <font>
             <Font name="Trebuchet MS" size="16.0" />
@@ -47,7 +45,6 @@
             <Font name="Trebuchet MS" size="16.0" />
          </font>
       </Button>
-      <Button fx:id="teacherDashboardRefreshButton" layoutX="280.0" layoutY="300.0" mnemonicParsing="false" onAction="#handleTeacherDashboardRefresh" prefHeight="40.0" prefWidth="160.0" style="-fx-background-color: #9E9E9E; -fx-text-fill: white; -fx-background-radius: 5;" text="Refresh" textAlignment="JUSTIFY">
          <font>
             <Font name="Trebuchet MS" size="16.0" />
          </font>
