--- a/Mini-Moodle/src/main/resources/com/example/minimoodle/teacher-login.fxml
+++ b/Mini-Moodle/src/main/resources/com/example/minimoodle/teacher-login.fxml
@@ -1,42 +1,50 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="400.0" prefWidth="640.0" xmlns="http://javafx.com/javafx/23.0.1"
-   xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.minimoodle.TeacherLoginController">
+<AnchorPane prefHeight="400.0" prefWidth="640.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.minimoodle.TeacherLoginController">
    <children>
-      <Label layoutX="219.0" layoutY="46.0" text="Teacher Login" textAlignment="JUSTIFY">
-         <font>
-            <Font name="Trebuchet MS" size="36.0" />
-         </font>
-      </Label>
-      <Label layoutX="208.0" layoutY="108.0" text="Enter Teacher ID and Password"
-         textAlignment="JUSTIFY">
-         <font>
-            <Font name="Trebuchet MS" size="18.0" />
-         </font>
-      </Label>
-      <TextField fx:id="teacherLoginIdBox" layoutX="218.0" layoutY="164.0" prefHeight="35.0"
-         prefWidth="230.0" promptText="Teacher ID" />
-      <PasswordField fx:id="teacherLoginPasswordBox" layoutX="218.0" layoutY="208.0"
-         prefHeight="35.0" prefWidth="230.0" promptText="Password" />
-      <TextField fx:id="teacherLoginPasswordVisibleBox" layoutX="218.0" layoutY="208.0"
-         prefHeight="35.0" prefWidth="230.0" promptText="Password" />
-      <CheckBox fx:id="teacherLoginPasswordCheckBox" layoutX="281.0" layoutY="255.0"
-         mnemonicParsing="false" onAction="#toggleTeacherLoginPasswordVisibility"
-         text="Show Password" textAlignment="JUSTIFY" />
-      <Button fx:id="teacherLoginButton" layoutX="256.0" layoutY="287.0" mnemonicParsing="false"
-         onAction="#processTeacherLogin" prefHeight="42.0" prefWidth="154.0" text="Login"
-         textAlignment="JUSTIFY">
-         <font>
-            <Font name="Trebuchet MS" size="16.0" />
-         </font>
-      </Button>
+      <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0" spacing="20.0" AnchorPane.bottomAnchor="20.0" AnchorPane.leftAnchor="20.0" AnchorPane.rightAnchor="20.0" AnchorPane.topAnchor="20.0">
+         <children>
+            <Label text="Teacher Login" textAlignment="CENTER">
+               <font>
+                  <Font name="Trebuchet MS" size="36.0" />
+               </font>
+            </Label>
+            <Label text="Enter Teacher ID and Password" textAlignment="JUSTIFY">
+               <font>
+                  <Font name="Trebuchet MS" size="18.0" />
+               </font>
+            </Label>
+            <VBox alignment="TOP_CENTER" prefHeight="201.0" prefWidth="554.0" spacing="15.0">
+               <children>
+                  <AnchorPane prefHeight="120.0" prefWidth="300.0">
+                     <children>
+                        <TextField fx:id="teacherLoginIdBox" layoutX="-7.0" layoutY="14.0" prefHeight="31.0" prefWidth="214.0" promptText="Teacher ID" AnchorPane.leftAnchor="-7.0" AnchorPane.rightAnchor="-6.600000000000023" />
+                        <PasswordField fx:id="teacherLoginPasswordBox" layoutX="-8.0" layoutY="68.0" prefHeight="31.0" prefWidth="214.0" promptText="Password" AnchorPane.leftAnchor="-8.0" AnchorPane.rightAnchor="-6.399999999999977" />
+                        <TextField fx:id="teacherLoginPasswordVisibleBox" layoutX="-7.0" layoutY="68.0" prefHeight="31.0" prefWidth="214.0" promptText="Password" AnchorPane.leftAnchor="-7.0" AnchorPane.rightAnchor="-6.599999999999994" />
+                     </children>
+                  </AnchorPane>
+                  <CheckBox fx:id="teacherLoginPasswordCheckBox" mnemonicParsing="false" onAction="#toggleTeacherLoginPasswordVisibility" text="Show Password" textAlignment="JUSTIFY" />
+                  <Button fx:id="teacherLoginButton" mnemonicParsing="false" onAction="#processTeacherLogin" prefHeight="31.0" prefWidth="159.0" text="Login" textAlignment="JUSTIFY">
+                     <font>
+                        <Font name="Trebuchet MS" size="16.0" />
+                     </font>
+                  </Button>
+               </children>
+               <padding>
+                  <Insets left="200.0" right="200.0" top="15.0" />
+               </padding>
+            </VBox>
+         </children>
+      </VBox>
    </children>
 </AnchorPane>
