--- a/Mini-Moodle/src/main/resources/com/example/minimoodle/teacher-dashboard.fxml
+++ b/Mini-Moodle/src/main/resources/com/example/minimoodle/teacher-dashboard.fxml
@@ -45,9 +45,9 @@
             <Font name="Trebuchet MS" size="16.0" />
          </font>
       </Button>
-         <font>
+         <!-- <font>
             <Font name="Trebuchet MS" size="16.0" />
-         </font>
+         </font> -->
       <!-- </Button> -->
       <Button fx:id="teacherDashboardLogoutButton" layoutX="541.0" layoutY="340.0" mnemonicParsing="false" onAction="#handleTeacherLogout" prefHeight="32.0" prefWidth="69.0" style="-fx-background-color: #F44336; -fx-text-fill: white; -fx-background-radius: 5;" text="Logout" textAlignment="JUSTIFY">
          <font>
