--- a/Mini-Moodle/src/main/resources/com/example/minimoodle/teacher-dashboard.fxml
+++ b/Mini-Moodle/src/main/resources/com/example/minimoodle/teacher-dashboard.fxml
@@ -2,57 +2,136 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.MenuButton?>
+<?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="400.0" prefWidth="640.0" style="-fx-background-color: #f4f4f4;" 
-            xmlns="http://javafx.com/javafx/23.0.1" 
-            xmlns:fx="http://javafx.com/fxml/1" 
-            fx:controller="com.example.minimoodle.TeacherDashboardController">
+<!-- <?import javafx.scene.image.ImageView?>
+<?import javafx.scene.control.ImageView?> -->
+
+<AnchorPane prefHeight="600.0" prefWidth="800.0"
+   style="-fx-background-color: linear-gradient(to bottom right, #1e3a8a, #3b82f6);"
+   xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1"
+   fx:controller="com.example.minimoodle.TeacherDashboardController">
    <children>
-      <Label fx:id="teacherIdLabel" layoutX="172.0" layoutY="38.0" text="Welcome, [Teacher]" textAlignment="JUSTIFY">
-         <font>
-            <Font name="Trebuchet MS" size="36.0" />
-         </font>
-      </Label>
-      <Label fx:id="courseNameLabel" layoutX="100.0" layoutY="120.0" text="Course Name: [Course Name]" textAlignment="JUSTIFY">
-         <font>
-            <Font name="Trebuchet MS" size="18.0" />
-         </font>
-      </Label>
-      <Label fx:id="courseIdLabel" layoutX="100.0" layoutY="150.0" text="Course ID: [Course ID]" textAlignment="JUSTIFY">
-         <font>
-            <Font name="Trebuchet MS" size="18.0" />
-         </font>
-      </Label>
-      <Label fx:id="enrolledStudentsLabel" layoutX="100.0" layoutY="180.0" text="Enrolled Students: [Count]" textAlignment="JUSTIFY">
-         <font>
-            <Font name="Trebuchet MS" size="18.0" />
-         </font>
-      </Label>
-      <Button fx:id="teacherDashboardApplicantsButton" layoutX="100.0" layoutY="240.0" mnemonicParsing="false" onAction="#handleTeacherSeeApplyingStudents" prefHeight="40.0" prefWidth="160.0" style="-fx-background-color: #4CAF50; -fx-text-fill: white; -fx-background-radius: 5;" text="Applicants" textAlignment="JUSTIFY">
-         <font>
-            <Font name="Trebuchet MS" size="16.0" />
-         </font>
-      </Button>
-      <Button fx:id="teacherDashboardEnrolledStudentsButton" layoutX="280.0" layoutY="240.0" mnemonicParsing="false" onAction="#handleTeacherViewEnrolledStudentsTable" prefHeight="40.0" prefWidth="160.0" style="-fx-background-color: #2196F3; -fx-text-fill: white; -fx-background-radius: 5;" text="Enrolled Students" textAlignment="JUSTIFY">
-         <font>
-            <Font name="Trebuchet MS" size="16.0" />
-         </font>
-      </Button>
-      <Button fx:id="teacherDashboardGradingButton" layoutX="100.0" layoutY="300.0" mnemonicParsing="false" onAction="#handleTeacherGrading" prefHeight="40.0" prefWidth="160.0" style="-fx-background-color: #FF9800; -fx-text-fill: white; -fx-background-radius: 5;" text="Grading" textAlignment="JUSTIFY">
-         <font>
-            <Font name="Trebuchet MS" size="16.0" />
-         </font>
-      </Button>
-         <!-- <font>
-            <Font name="Trebuchet MS" size="16.0" />
-         </font> -->
-      <!-- </Button> -->
-      <Button fx:id="teacherDashboardLogoutButton" layoutX="541.0" layoutY="340.0" mnemonicParsing="false" onAction="#handleTeacherLogout" prefHeight="32.0" prefWidth="69.0" style="-fx-background-color: #F44336; -fx-text-fill: white; -fx-background-radius: 5;" text="Logout" textAlignment="JUSTIFY">
-         <font>
-            <Font name="Trebuchet MS" size="16.0" />
-         </font>
-      </Button>
+      <VBox alignment="CENTER" spacing="20.0" AnchorPane.bottomAnchor="20.0"
+         AnchorPane.leftAnchor="20.0" AnchorPane.rightAnchor="20.0" AnchorPane.topAnchor="20.0">
+         <children>
+            <AnchorPane
+               style="-fx-background-color: #ffffff; -fx-background-radius: 15; -fx-effect: dropshadow(gaussian, rgba(0,0,0,0.2), 10, 0, 0, 5);">
+               <children>
+                  <VBox alignment="CENTER" spacing="20.0" AnchorPane.bottomAnchor="20.0"
+                     AnchorPane.leftAnchor="20.0" AnchorPane.rightAnchor="20.0"
+                     AnchorPane.topAnchor="20.0">
+                     <children>
+                        <!-- Welcome Label -->
+                        <Label fx:id="teacherIdLabel"
+                           style="-fx-text-fill: #1e3a8a; -fx-font-weight: bold;"
+                           text="Welcome, [Teacher]" textAlignment="CENTER">
+                           <font>
+                              <Font name="System Bold" size="32.0" />
+                           </font>
+                        </Label>
+
+                        <!-- Course Info -->
+                        <Label fx:id="courseNameLabel"
+                           style="-fx-text-fill: #4b5563; font-size: 18px; text-align:center;"
+                           text="Course Name: [Course Name]" textAlignment="CENTER">
+                           <font>
+                              <Font name="System" size="18.0" />
+                           </font>
+                        </Label>
+                        <Label fx:id="courseIdLabel"
+                           style="-fx-text-fill: #4b5563; font-size: 18px;"
+                           text="Course ID: [Course ID]" textAlignment="CENTER">
+                           <font>
+                              <Font name="System" size="18.0" />
+                           </font>
+                        </Label>
+                        <Label fx:id="enrolledStudentsLabel"
+                           style="-fx-text-fill: #4b5563; font-size: 18px;"
+                           text="Enrolled Students: [Count]" textAlignment="CENTER">
+                           <font>
+                              <Font name="System" size="18.0" />
+                           </font>
+                        </Label>
+
+                        <!-- Buttons Section -->
+                        <VBox alignment="CENTER" spacing="10.0">
+                           <Button fx:id="teacherDashboardApplicantsButton" mnemonicParsing="false"
+                              onAction="#handleTeacherSeeApplyingStudents"
+                              style="-fx-background-color: #3b82f6; -fx-text-fill: white; -fx-background-radius: 10; -fx-padding: 12 25; -fx-font-size: 16; -fx-cursor: hand;"
+                              text="Applicants">
+                              <font>
+                                 <Font name="System" size="16.0" />
+                              </font>
+                           </Button>
+
+                           <Button fx:id="teacherDashboardEnrolledStudentsButton"
+                              mnemonicParsing="false"
+                              onAction="#handleTeacherViewEnrolledStudentsTable"
+                              style="-fx-background-color: #3b82f6; -fx-text-fill: white; -fx-background-radius: 10; -fx-padding: 12 25; -fx-font-size: 16; -fx-cursor: hand;"
+                              text="Enrolled Students">
+                              <font>
+                                 <Font name="System" size="16.0" />
+                              </font>
+                           </Button>
+
+                           <Button fx:id="teacherDashboardGradingButton" mnemonicParsing="false"
+                              onAction="#handleTeacherGrading"
+                              style="-fx-background-color: #3b82f6; -fx-text-fill: white; -fx-background-radius: 10; -fx-padding: 12 25; -fx-font-size: 16; -fx-cursor: hand;"
+                              text="Grading">
+                              <font>
+                                 <Font name="System" size="16.0" />
+                              </font>
+                           </Button>
+
+                           <!-- Refresh Button -->
+                           <Button fx:id="teacherDashboardRefreshButton" mnemonicParsing="false"
+                              onAction="#handleTeacherRefresh"
+                              style="-fx-background-color: #34d399; -fx-text-fill: white; -fx-background-radius: 10; -fx-padding: 12 25; -fx-font-size: 16; -fx-cursor: hand;"
+                              text="Refresh">
+                              <font>
+                                 <Font name="System" size="16.0" />
+                              </font>
+                           </Button>
+
+                           <!-- Settings Menu -->
+                           <MenuButton fx:id="teacherSettingsButton" mnemonicParsing="false"
+                              style="-fx-background-color: #6b7280; -fx-text-fill: white; -fx-background-radius: 10; -fx-padding: 12 25; -fx-font-size: 16; -fx-cursor: hand;"
+                              text="Settings">
+                              <items>
+                                 <MenuItem fx:id="teacherChangePasswordButton"
+                                    mnemonicParsing="false" onAction="#handleTeacherPasswordChange"
+                                    text="Change Password" />
+                              </items>
+                              <font>
+                                 <Font name="System" size="16.0" />
+                              </font>
+                           </MenuButton>
+
+                           <!-- Logout Button -->
+                           <Button fx:id="teacherDashboardLogoutButton" mnemonicParsing="false"
+                              onAction="#handleTeacherLogout"
+                              style="-fx-background-color: #ef4444; -fx-text-fill: white; -fx-background-radius: 10; -fx-padding: 12 25; -fx-font-size: 16; -fx-cursor: hand;"
+                              text="Logout">
+                              <font>
+                                 <Font name="System" size="16.0" />
+                              </font>
+                           </Button>
+                        </VBox>
+                     </children>
+                  </VBox>
+               </children>
+            </AnchorPane>
+         </children>
+      </VBox>
    </children>
+   <!-- <stylesheets>
+      @teacher-dashboard.css
+   </stylesheets> -->
+
+
 </AnchorPane>
