--- a/Mini-Moodle/src/main/resources/com/example/minimoodle/teacher-login.fxml
+++ b/Mini-Moodle/src/main/resources/com/example/minimoodle/teacher-login.fxml
@@ -9,40 +9,98 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
+<?import javafx.scene.effect.DropShadow?>
+<?import javafx.scene.paint.Color?>
 
 <AnchorPane prefHeight="400.0" prefWidth="640.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.minimoodle.TeacherLoginController">
    <children>
-      <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0" spacing="20.0" AnchorPane.bottomAnchor="20.0" AnchorPane.leftAnchor="20.0" AnchorPane.rightAnchor="20.0" AnchorPane.topAnchor="20.0">
+      <VBox alignment="CENTER" prefHeight="350.0" prefWidth="100.0" spacing="30.0" AnchorPane.bottomAnchor="20.0" AnchorPane.leftAnchor="20.0" AnchorPane.rightAnchor="20.0" AnchorPane.topAnchor="20.0">
          <children>
+            <!-- Title -->
             <Label text="Teacher Login" textAlignment="CENTER">
                <font>
-                  <Font name="Trebuchet MS" size="36.0" />
+                  <Font name="Trebuchet MS" size="40.0" />
                </font>
+               <!-- <effect>
+                  <DropShadow offsetX="5.0" offsetY="5.0" radius="12.0" spread="0.7" color="#3A8DFF"/>
+               </effect> -->
+               <style>
+                  -fx-text-fill: linear-gradient(to right, #3A8DFF, #58A6FF);
+               </style>
             </Label>
-            <Label text="Enter Teacher ID and Password" textAlignment="JUSTIFY">
+
+            <!-- Subtitle -->
+            <Label text="Enter Teacher ID and Password" textAlignment="CENTER">
                <font>
-                  <Font name="Trebuchet MS" size="18.0" />
+                  <Font name="Trebuchet MS" size="20.0" />
                </font>
+               <style>
+                  -fx-text-fill: #4F4F4F;
+               </style>
             </Label>
-            <VBox alignment="TOP_CENTER" prefHeight="201.0" prefWidth="554.0" spacing="15.0">
+
+            <!-- Form Container -->
+            <VBox alignment="TOP_CENTER" prefHeight="250.0" prefWidth="500.0" spacing="20.0">
                <children>
-                  <AnchorPane prefHeight="120.0" prefWidth="300.0">
+                  <!-- Teacher ID Field -->
+                  <AnchorPane prefHeight="50.0" prefWidth="350.0">
                      <children>
-                        <TextField fx:id="teacherLoginIdBox" layoutX="-7.0" layoutY="14.0" prefHeight="31.0" prefWidth="214.0" promptText="Teacher ID" AnchorPane.leftAnchor="-7.0" AnchorPane.rightAnchor="-6.600000000000023" />
-                        <PasswordField fx:id="teacherLoginPasswordBox" layoutX="-8.0" layoutY="68.0" prefHeight="31.0" prefWidth="214.0" promptText="Password" AnchorPane.leftAnchor="-8.0" AnchorPane.rightAnchor="-6.399999999999977" />
-                        <TextField fx:id="teacherLoginPasswordVisibleBox" layoutX="-7.0" layoutY="68.0" prefHeight="31.0" prefWidth="214.0" promptText="Password" AnchorPane.leftAnchor="-7.0" AnchorPane.rightAnchor="-6.599999999999994" />
+                        <TextField fx:id="teacherLoginIdBox" layoutX="10.0" layoutY="10.0" prefHeight="40.0" prefWidth="330.0" promptText="Teacher ID" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0">
+                           <style>
+                              -fx-background-color: #F9F9F9;
+                              -fx-border-radius: 5;
+                              -fx-border-color: #B0B0B0;
+                              -fx-padding: 5px;
+                              -fx-font-size: 14px;
+                           </style>
+                        </TextField>
                      </children>
                   </AnchorPane>
-                  <CheckBox fx:id="teacherLoginPasswordCheckBox" mnemonicParsing="false" onAction="#toggleTeacherLoginPasswordVisibility" text="Show Password" textAlignment="JUSTIFY" />
-                  <Button fx:id="teacherLoginButton" mnemonicParsing="false" onAction="#processTeacherLogin" prefHeight="31.0" prefWidth="159.0" text="Login" textAlignment="JUSTIFY">
+
+                  <!-- Password Field -->
+                  <AnchorPane prefHeight="50.0" prefWidth="350.0">
+                     <children>
+                        <PasswordField fx:id="teacherLoginPasswordBox" layoutX="10.0" layoutY="10.0" prefHeight="40.0" prefWidth="330.0" promptText="Password" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0">
+                           <style>
+                              -fx-background-color: #F9F9F9;
+                              -fx-border-radius: 5;
+                              -fx-border-color: #B0B0B0;
+                              -fx-padding: 5px;
+                              -fx-font-size: 14px;
+                           </style>
+                        </PasswordField>
+                        <TextField fx:id="teacherLoginPasswordVisibleBox" layoutX="10.0" layoutY="10.0" prefHeight="40.0" prefWidth="330.0" promptText="Password" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0">
+                           <style>
+                              -fx-background-color: #F9F9F9;
+                              -fx-border-radius: 5;
+                              -fx-border-color: #B0B0B0;
+                              -fx-padding: 5px;
+                              -fx-font-size: 14px;
+                           </style>
+                        </TextField>
+                     </children>
+                  </AnchorPane>
+
+
+                  <!-- Password Visibility Toggle -->
+                  <CheckBox fx:id="teacherLoginPasswordCheckBox" mnemonicParsing="false" onAction="#toggleTeacherLoginPasswordVisibility" text="Show Password" textAlignment="JUSTIFY" style="-fx-text-fill: #4F4F4F;"/>
+
+                  <!-- Login Button -->
+                  <Button fx:id="teacherLoginButton" mnemonicParsing="false" onAction="#processTeacherLogin" prefHeight="40.0" prefWidth="200.0" text="Login" textAlignment="CENTER">
                      <font>
-                        <Font name="Trebuchet MS" size="16.0" />
+                        <Font name="Trebuchet MS" size="18.0" />
                      </font>
+                     <style>
+                        -fx-background-color: linear-gradient(to right, #3A8DFF, #58A6FF);
+                        -fx-text-fill: white;
+                        -fx-font-weight: bold;
+                        -fx-border-radius: 25;
+                        -fx-padding: 10px 20px;
+                        -fx-effect: dropshadow(gaussian, #333333, 10, 0.5, 0, 2);
+                        -fx-cursor: hand;
+                     </style>
                   </Button>
                </children>
-               <padding>
-                  <Insets left="200.0" right="200.0" top="15.0" />
-               </padding>
             </VBox>
          </children>
       </VBox>
