--- a/Mini-Moodle/src/main/resources/com/example/minimoodle/student-login.fxml
+++ b/Mini-Moodle/src/main/resources/com/example/minimoodle/student-login.fxml
@@ -1,6 +1,4 @@
 <?xml version="1.0" encoding="UTF-8"?>
-
-<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.Label?>
@@ -9,8 +7,6 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
-<?import javafx.scene.effect.DropShadow?>
-<?import javafx.scene.paint.Color?>
 
 <AnchorPane prefHeight="400.0" prefWidth="640.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.minimoodle.StudentLoginController">
    <children>
@@ -27,7 +23,7 @@
             </Label>
 
             <!-- Subtitle -->
-            <Label text="Enter Student ID and Password" textAlignment="CENTER">
+            <Label text="Enter Username and Password" textAlignment="CENTER">
                <font>
                   <Font name="Trebuchet MS" size="20.0" />
                </font>
@@ -37,7 +33,7 @@
             </Label>
 
             <!-- Back Button -->
-            <Button fx:id="studentLoginBackButton" mnemonicParsing="false" onAction="#handleStudentLoginBack" text="Back" prefWidth="80.0" style="-fx-background-color: #EEEEEE; -fx-text-fill: #FF6F61; -fx-font-weight: bold; -fx-border-radius: 15; -fx-padding: 5px 10px; -fx-cursor: hand;">
+            <Button fx:id="studentLoginBackButton" mnemonicParsing="false" onAction="#handleStudentLoginBack" prefWidth="80.0" style="-fx-background-color: #EEEEEE; -fx-text-fill: #FF6F61; -fx-font-weight: bold; -fx-border-radius: 15; -fx-padding: 5px 10px; -fx-cursor: hand;" text="Back">
                <font>
                   <Font name="Trebuchet MS" size="14.0" />
                </font>
@@ -46,10 +42,10 @@
             <!-- Form Container -->
             <VBox alignment="TOP_CENTER" prefHeight="250.0" prefWidth="500.0" spacing="20.0">
                <children>
-                  <!-- Student ID Field -->
+                  <!-- Username Field (was Student ID) -->
                   <AnchorPane prefHeight="50.0" prefWidth="350.0">
                      <children>
-                        <TextField fx:id="studentLoginIdBox" layoutX="10.0" layoutY="10.0" prefHeight="40.0" prefWidth="330.0" promptText="Student ID" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0">
+                        <TextField fx:id="studentLoginIdBox" layoutX="10.0" layoutY="10.0" prefHeight="40.0" prefWidth="330.0" promptText="Username" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0">
                            <style>
                               -fx-background-color: #F9F9F9;
                               -fx-border-radius: 5;
@@ -73,8 +69,7 @@
                               -fx-font-size: 14px;
                            </style>
                         </PasswordField>
-                        <!-- TextField for Password Visibility -->
-                        <TextField fx:id="studentLoginPasswordVisibleBox" layoutX="10.0" layoutY="10.0" prefHeight="40.0" prefWidth="330.0" promptText="Password" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0" visible="false">
+                        <TextField fx:id="studentLoginPasswordVisibleBox" layoutX="10.0" layoutY="10.0" prefHeight="40.0" prefWidth="330.0" promptText="Password" visible="false" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0">
                            <style>
                               -fx-background-color: #F9F9F9;
                               -fx-border-radius: 5;
@@ -87,7 +82,7 @@
                   </AnchorPane>
 
                   <!-- Password Visibility Toggle -->
-                  <CheckBox fx:id="studentLoginPasswordCheckBox" mnemonicParsing="false" onAction="#toggleStudentLoginPasswordVisibility" text="Show Password" textAlignment="JUSTIFY" style="-fx-text-fill: #4F4F4F;"/>
+                  <CheckBox fx:id="studentLoginPasswordCheckBox" mnemonicParsing="false" onAction="#toggleStudentLoginPasswordVisibility" style="-fx-text-fill: #4F4F4F;" text="Show Password" textAlignment="JUSTIFY" />
 
                   <!-- Login Button -->
                   <Button fx:id="studentLoginButton" mnemonicParsing="false" onAction="#handleStudentLogin" prefHeight="40.0" prefWidth="200.0" text="Login" textAlignment="CENTER">
@@ -104,6 +99,23 @@
                         -fx-cursor: hand;
                      </style>
                   </Button>
+
+                  <!-- Register Button -->
+                  <Button fx:id="studentRegisterButton" mnemonicParsing="false" onAction="#handleStudentRegister" prefHeight="30.0" prefWidth="200.0" text="Register Yourself" textAlignment="CENTER">
+                     <font>
+                        <Font name="Trebuchet MS" size="16.0" />
+                     </font>
+                     <style>
+                        -fx-background-color: linear-gradient(to right, #FFD54F, #FF6F61);
+                        -fx-text-fill: white;
+                        -fx-font-weight: bold;
+                        -fx-border-radius: 25;
+                        -fx-padding: 10px 20px;
+                        -fx-effect: dropshadow(gaussian, #333333, 8, 0.4, 0, 1);
+                        -fx-cursor: hand;
+                     </style>
+                  </Button>
+
                </children>
             </VBox>
          </children>
